# maestro-ai-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  run.sh
app/: __init__.py  config.py  main.py  models.py  services.py
app/agents/: __init__.py  base.py  defect_agent.py  text_agent.py
app/agents/prompts/: __init__.py  defect_detection.py  text_extraction.py
app/api/: __init__.py  deps.py
app/api/v2/: __init__.py  defects.py  extract.py  router.py
app/core/: __init__.py  llm.py
app/middleware/: __init__.py  logging.py
app/schemas/: __init__.py  defects.py  extract.py
app/services/: __init__.py  defect_service.py  text_service.py
app/utils/: __init__.py  image.py
tests/: __init__.py  conftest.py  test_integration_llm.py  test_main.py  test_middleware.py  test_services.py
tests/test_api/: __init__.py  test_endpoints.py
